--- a/README
+++ b/README
@@ -51,6 +51,7 @@ Supported Architectures:
 	3E (Haswell)
 	4F (Broadwell)
 	9E (Kaby Lake)
+	55 (Skylake)
 
 If you are unsure of your architecture number, check the "model" field in `lscpu`
 or `/proc/cpuinfo` (note that it will not be in hexadecimal).
@@ -62,8 +63,8 @@ From within the build directory, tests can be executed with the
 `make test` target.
 
 
-Support Additionala Intel Platforms
------------------------------------
+Support Additional Intel Platforms
+----------------------------------
 1) Under `Intel/` directory, create a `.h` and `.c` header and source file for the
 respective platform. This will contain features specific to that platform,
 which may or may not exist in previous generations. 
