Update README and AUTHORS list.
Signed-off-by: Stephanie Brink <brink2@llnl.gov>

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,8 +2,9 @@ We would like to acknowledge previous developers who have contributed to the
 libvariorum project:
 
 Peter Bailey
+Stephanie Brink
 Daniel Ellsworth
-Stephanie Labasan
+Aniruddha Marathe
 Lauren Morita
 Tapasya Patki
 Barry Rountree
