--- a/AUTHORS
+++ b/AUTHORS
@@ -2,7 +2,7 @@ We would like to acknowledge previous developers who have contributed to the
 variorum project (in alphabetical order):
 
 Peter Bailey
-Greyson Blanks
+Grayson Blanks
 Jeff Booher-Kaeding
 Stephanie Brink
 Tiffany Connors
