--- a/README
+++ b/README
@@ -68,7 +68,7 @@ installs. These can be used as follows:
 
 
 ## Platform Support
-Currently supported architectures are Intel Xeons (server processors). The
+Currently supported architectures are (mostly) Intel Xeons (server processors). The
 library technically supports all Intel processors based on these architectures,
 but some features may vary between platforms.
 
@@ -78,11 +78,11 @@ Supported Intel Architectures:
 	0x3E (Ivy Bridge)
 	0x3E (Haswell)
 	0x4F (Broadwell)
-	0x9E (Kaby Lake)
+	0x9E (Kaby Lake, Coffee Lake)
 	0x55 (Skylake)
 
 If you are unsure of your architecture number, check the "model" field in `lscpu`
-or `/proc/cpuinfo` (note that it will not be in hexadecimal).
+or `/proc/cpuinfo` (note that it will be printed in decimal, not hexadecimal).
 
 Supported IBM Architectures:
 
