--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,11 @@
-* Wed Nov 6 2019 Stephanie Brink <brink2@llnl.gov> v0.1.0
+* Wed Nov 11 2019 Stephanie Brink <brink2@llnl.gov> v0.1.0
 - Initial release to <https://github.com/llnl/variorum>!
 - Includes support for Intel platform -- Sandy Bridge, Ivy Bridge, Haswell,
 Broadwell, Skylake, and Kaby Lake architectures
 - Includes support for IBM platform -- Power9 architecture
 - Add powmon command line sample for monitoring performance counters during
 application execution
+- Initial RTD at <https://variorum.readthedocs.io>
 - Rename libvariorum to variorum
 - Bug fix for computing power from energy on Intel
 - Add developer docs for supporting new platforms
