Fixed spelling of Grayson's name.

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,7 +3,7 @@ variorum project (in alphabetical order):
 
 Peter Bailey
 Shilpasri Bhat
-Greyson Blanks
+Grayson Blanks
 Jeff Booher-Kaeding
 Stephanie Brink
 Tiffany Connors
