Added icons, fixed typeface name.

--- a/images/README
+++ b/images/README
@@ -1,4 +1,4 @@
-Created with Vectr using IM Fell Double Pica.
+Created with Vectr using IM Fell DW Pica.
 
 https://fonts.google.com/specimen/IM+Fell+Double+Pica
 
