--- a/README
+++ b/README
@@ -76,7 +76,7 @@ installs. These can be used as follows:
 Variorum has support for an increasing number of platforms and
 microarchitectures:
 
-Platforms supported: Intel, IBM, NVIDIA, ARM
+Platforms supported: Intel, IBM, AMD, NVIDIA, ARM
 
 Supported Intel Microarchitectures:
 
@@ -90,6 +90,11 @@ Supported Intel Microarchitectures:
 
 If you are unsure of your architecture number, check the "model" field in `lscpu`
 or `/proc/cpuinfo` (note that it will not be in hexadecimal).
+
+
+Supported AMD Microrchitectures:
+
+    Family 19h, Models 0~Fh and 30h ~ 3Fh (EPYC Milan) 
 
 Supported IBM Microrchitectures:
 
@@ -118,15 +123,6 @@ Please report any failed tests to the project team at
 For sample code, see the `examples/` directory.
 
 
-## Support Additional Intel Platforms
-1. Under `Intel/` directory, create a `.h` and `.c` header and source file for
-the respective platform. This will contain features specific to that platform,
-which may or may not exist in previous generations.
-2. Modify `Intel/config_intel.c` to set the function pointers for the
-respective platform.
-3. Include the new header file in `Intel/config_architecture.h`.
-
-
 ## System Environment Requirements
 This software has certain system requirements depending on what hardware you
 are running on.
@@ -137,6 +133,9 @@ additional capabilities. We have found it easier to use our own
 [msr-safe](https://github.com/LLNL/msr-safe) kernel module, but running as root
 (or going through the bother of adding the capabilities to the binaries) is
 another option.
+
+AMD: Running this software on AMD platforms depends on the AMD Energy Driver, 
+AMD HSMP driver, and AMD E-SMI library being available with the correct permissions. 
 
 IBM: Running this software on IBM platforms depends on the OPAL files being
 present with R/W permissions.
