--- a/README
+++ b/README
@@ -76,7 +76,23 @@ installs. These can be used as follows:
 Variorum has support for an increasing number of platforms and
 microarchitectures:
 
-Platforms supported: Intel, IBM, AMD, NVIDIA, ARM
+Platforms supported: AMD,ARM, IBM, Intel, NVIDIA
+
+If you are unsure of your architecture number, check the "model" field in `lscpu`
+or `/proc/cpuinfo` (note that it will not be in hexadecimal).
+
+
+Supported AMD Microrchitectures:
+
+    Family 19h, Models 0~Fh and 30h ~ 3Fh (EPYC Milan) 
+
+Supported ARM Microrchitectures:
+
+    Juno r2
+
+Supported IBM Microrchitectures:
+
+    Power9
 
 Supported Intel Microarchitectures:
 
@@ -88,25 +104,10 @@ Supported Intel Microarchitectures:
     0x9E (Kaby Lake)
     0x55 (Skylake)
 
-If you are unsure of your architecture number, check the "model" field in `lscpu`
-or `/proc/cpuinfo` (note that it will not be in hexadecimal).
-
-
-Supported AMD Microrchitectures:
-
-    Family 19h, Models 0~Fh and 30h ~ 3Fh (EPYC Milan) 
-
-Supported IBM Microrchitectures:
-
-    Power9
-
 Supported Nvidia Microrchitectures:
 
     Volta (requires [CUDA Toolkit[(https://developer.nvidia.com/cuda-downloads))
 
-Supported ARM Microrchitectures:
-
-    Juno r2
 
 ## Testing
 
@@ -127,6 +128,16 @@ For sample code, see the `examples/` directory.
 This software has certain system requirements depending on what hardware you
 are running on.
 
+AMD: Running this software on AMD platforms depends on the AMD Energy Driver, 
+AMD HSMP driver, and AMD E-SMI library being available with the correct permissions. 
+
+ARM: Running this software on ARM platforms depends on the Linux Hardware
+Monitoring (hwmon) subsystem for access to the monitoring and control
+interfaces.
+
+IBM: Running this software on IBM platforms depends on the OPAL files being
+present with R/W permissions.
+
 Intel: Running this software on Intel platforms depends on the files
 `/dev/cpu/*/msr` being present with R/W permissions. Recent kernels require
 additional capabilities. We have found it easier to use our own
@@ -134,17 +145,8 @@ additional capabilities. We have found it easier to use our own
 (or going through the bother of adding the capabilities to the binaries) is
 another option.
 
-AMD: Running this software on AMD platforms depends on the AMD Energy Driver, 
-AMD HSMP driver, and AMD E-SMI library being available with the correct permissions. 
-
-IBM: Running this software on IBM platforms depends on the OPAL files being
-present with R/W permissions.
-
 Nvidia: Running this software on Nvidia platforms depends on CUDA being loaded.
 
-ARM: Running this software on ARM platforms depends on the Linux Hardware
-Monitoring (hwmon) subsystem for access to the monitoring and control
-interfaces.
 
 
 ## Bug Tracker
