--- a/AUTHORS
+++ b/AUTHORS
@@ -1,17 +1,23 @@
-We would like to acknowledge previous developers who have contributed to the
-variorum project (in alphabetical order):
+We would like to acknowledge previous and current developers who have 
+contributed to the variorum project (in alphabetical order along with their
+current affiliation). 
 
-Peter Bailey
-Shilpasri Bhat
-Grayson Blanks
-Jeff Booher-Kaeding
-Stephanie Brink
-Tiffany Connors
-Rigoberto Delgado
-Daniel Ellsworth
-Aniruddha Marathe
-Lauren Morita
-Tapasya Patki
-Barry Rountree
-Kathleen Shoga
-Scott Walker
+Peter Bailey (Google)
+Shilpasri Bhat (IBM)
+Grayson Blanks (Apple)
+Naveen Krishna Chatradhi (AMD)
+Jeff Booher-Kaeding (ARM)
+Stephanie Brink (LLNL) 
+Tiffany Connors (NERSC)
+Rigoberto Delgado (LLNL) 
+Daniel Ellsworth (Colorado Colege)
+Jessica Hannebert (Colorado College)
+Aniruddha Marathe (LLNL)
+Lauren Morita (LLNL)
+Tapasya Patki (LLNL)
+Todd Rosedahl (IBM)
+Barry Rountree (LLNL)
+Siva Sathappan (AMD)
+Kathleen Shoga (LLNL)
+Scott Walker (Intel)
+Kazutomo Yoshii (Argonne National Laboratory)
