--- a/README
+++ b/README
@@ -103,11 +103,11 @@ Supported Intel Microarchitectures:
     0x4F (Broadwell)
     0x9E (Kaby Lake)
     0x55 (Skylake)
+    0x6A (Ice Lake)
 
 Supported Nvidia Microrchitectures:
 
     Volta (requires [CUDA Toolkit[(https://developer.nvidia.com/cuda-downloads))
-
 
 ## Testing
 
