Add ECP Acknowledgment. Use full acknowledgment as it mentions software

--- a/README
+++ b/README
@@ -195,7 +195,6 @@ Please feel free to contact the developers with any questions or feedback.
 We collect names of those who have contributed to Variorum over
 the years. See the current list in [AUTHORS](./AUTHORS).
 
-
 ## License
 Variorum is released under the MIT license. For more details, see the
 [LICENSE](./LICENSE) and [NOTICE](./NOTICE) files.
@@ -203,3 +202,6 @@ Variorum is released under the MIT license. For more details, see the
 SPDX-License-Identifier: MIT
 
 `LLNL-CODE-789253`
+
+## Acknowledgments
+This research was supported by the Exascale Computing Project (17-SC-20-SC), a joint project of the U.S. Department of Energy's Office of Science and National Nuclear Security Administration, responsible for delivering a capable exascale ecosystem, including software, applications, and hardware technology, to support the nation's exascale computing imperative.
