--- a/README
+++ b/README
@@ -21,11 +21,8 @@ https://variorum.readthedocs.io
 
 ## Overview
 
-Variorum is an extensible vendor-neutral library for exposing power and
-performance monitoring and control of low-level hardware dials.
-
-Currently, it is Linux-only.
-
+Variorum is an extensible vendor-neutral library for Linux that exposes 
+power and performance monitoring and control of low-level hardware dials.
 
 ## Documentation
 
